[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = "assistant project"
authors = ["Oleksandra Melnyk <oleksandramelnyk.ibm@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
pathlib = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
